# Emogen-Public-OSF

./: .gitignore  README.md
EmoGen_deployment_v2/Deployment_version/: LICENCE  commands_to_run_without_web_app.txt  ruby_test_file_modification.rb  run_tool.sh  run_tool_next_gen.prof  run_tool_start.prof  run_visualisation.sh  run_visualisation_wrapper.py
EmoGen_deployment_v2/Deployment_version/ApplyBlendweights/: CMakeLists.txt  main.cpp  readme.txt
EmoGen_deployment_v2/Deployment_version/EmoGen_tool/: CMakeLists.txt  CorrectiveWeightsAnalytic.cpp  CorrectiveWeightsAnalytic.hpp  box_multiwidget.cpp  box_multiwidget.hpp  data.cpp  data.hpp  main.cpp  utility.cpp  utility.hpp
EmoGen_deployment_v2/Deployment_version/EmoGen_tool/common/: StandardShading.fragmentshader  TextVertexShader.vertexshader  objloader.cpp  objloader.hpp  shader.cpp  text2D.cpp  texture.cpp
EmoGen_deployment_v2/Deployment_version/data/: UpperTeeth_polygons.txt  collision_anchors_upper_lip.txt  initialisation.csv  lowLip_polygons_extended.txt  shapes.txt  target_points.txt
EmoGen_deployment_v2/Deployment_version/data/FEMALE/: neutral.mtl
EmoGen_deployment_v2/Deployment_version/data/MALE/: neutral.mtl
EmoGen_deployment_v2/Deployment_version/deployment/: EmoGen_tool_install.sh
EmoGen_deployment_v2/Deployment_version/docs/: 00.chp  01.chp  01.code-review.chp  02.chp  emoGen.story  meStory.py  story2.css
EmoGen_deployment_v2/Deployment_version/docs/imgs/: emoGen-sysDiagram.drawio
EmoGen_deployment_v2/Deployment_version/user_data/: sample.csv  sample.txt  test.csv
